<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="measures_done_text">Измерения проведены:</string>
    <string name="measures_none">Нет</string>

    <!--Arguments-->
    <!--<string name="site_id">site_id</string>
    <string name="storage_posi"-->


    <!--Site Fragment-->
    <string name="site_address">Адрес:</string>
    <string name="site_position">Координаты:</string>
    <string name="site_type">Тип сайта:</string>
    <string name="site_description">Описание:</string>

    <string name="site_owner">Владелец:</string> <!--Сюда же логотип-->

    <string name="construction_version">Версия:</string>
    <string name="construction_description">Конструкция:</string>
    <string name="construction_type">Тип:</string>
    <string name="construction_config">Конфигурация:</string>
    <string name="construction_height">Высота:</string>
    <string name="construction_sections">Кол-во секций:</string>

    <string name="measure_employee_name">Исполнитель:</string>
    <string name="measure_date">Дата измерений:</string>
    <string name="measure_conclusion">Заключение:</string>  <!--Удовлетворительное или нет-->
    <string name="measure_satisfied_yes">Удовлетворительно</string>
    <string name="measure_satisfied_no">Неудовлетворительно</string>

    <string-array name="construction_configs">
        <item>Четырехгранная</item>
        <item>Трехгранная</item>
        <item>Круг</item>
    </string-array>

    <!--status-->
    <string name="unsatisfactory">Аварийное</string>
    <string name="satisfactory">Удовлетворительно</string>
    <string name="none">Измерения не проводились</string>

    <!--Buttons names child recycler view-->
    <string name="btn_bgd_save">Сохранить</string>
    <string name="btn_bgd_delete">Удалить</string>

    <!--
    <string name="tower">Башня</string>
    <string name="mast">Мачта</string>
    <string name="pole">Столб</string>-->
</resources>